@@ -67,6 +67,9 @@ class SharedPreferencesExt(context: Context) {
     val webForceDark: Boolean
         get() = sharedPreferences.getBoolean(FORCE_DARK_KEY, false)
 
+    val randomUserAgent: Boolean
+        get() = sharedPreferences.getBoolean(RANDOM_USERAGENT, false)
+
     val doNotTrackEnabled: Boolean
         get() = sharedPreferences.getBoolean(DO_NOT_TRACK_ENABLED_KEY, DO_NOT_TRACK_ENABLED_DEFAULT)
 
@@ -119,5 +122,6 @@ class SharedPreferencesExt(context: Context) {
         private const val KEY_URLBAR = "key_urlbar"
         private const val DP_URLBAR_KEY = "key_dp_toolbar"
         private const val FORCE_DARK_KEY = "key_force_dark"
+        private const val RANDOM_USERAGENT = "key_random_useragent"
     }
 }
