@@ -5,6 +5,7 @@
 
 package org.lineageos.jelly.utils
 
+import android.content.Context
 import android.content.res.Configuration
 import android.content.res.Resources
 import android.graphics.Bitmap
@@ -14,13 +15,16 @@ import android.graphics.Paint
 import android.graphics.PorterDuff
 import android.graphics.PorterDuffXfermode
 import android.graphics.Rect
+import android.os.Build
 import android.util.TypedValue
 import android.view.View
 import android.view.Window
+import android.webkit.WebSettings
 import androidx.core.graphics.ColorUtils
 import androidx.core.view.WindowInsetsCompat
 import androidx.core.view.WindowInsetsControllerCompat
 import androidx.palette.graphics.Palette
+import org.lineageos.jelly.BuildConfig
 
 object UiUtils {
     fun isColorLight(color: Int): Boolean {
@@ -30,6 +34,34 @@ object UiUtils {
         val hsl = FloatArray(3)
         ColorUtils.RGBToHSL(red, green, blue, hsl)
         return hsl[2] > 0.5f
+    }
+
+    fun userWeb(s: String): String {
+        var tmp = "0"
+        if (s.indexOf("Chrome/") > 0) {
+            tmp = s.substring(s.indexOf("Chrome/")+7)
+            if (s.indexOf(".") > 0) {
+                tmp = tmp.substring(0, tmp.indexOf("."))
+            }
+        }
+        return tmp
+    }
+
+    fun fakeUserAgent(ctx: Context, b: Boolean, bWay: Boolean): String {
+        val tmp = if (b) ((0..100000).random().toString() + "." + (0..1000).random())
+        else "?????.???"
+        return if (bWay) ("Mozilla/5.0 (Linux; Android " + Build.VERSION.RELEASE +
+                "; Android SDK Build/" + tmp +
+                "; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/" +
+                userWeb(WebSettings.getDefaultUserAgent(ctx)) +
+                ".0.1.2 Mobile Safari/537.36")
+        else ("Mozilla/5.0 (Android 10; Mobile; rv:" +
+                userWeb(WebSettings.getDefaultUserAgent(ctx)) +
+                ".0) Gecko/"+
+                userWeb(WebSettings.getDefaultUserAgent(ctx)) +
+                ".0 Firefox/"+
+                userWeb(WebSettings.getDefaultUserAgent(ctx)) +
+                ".0")
     }
 
     fun getGray(resources: Resources?): Int {
