@@ -1,4 +1,4 @@
-# Jelly Browser
+# (Kotlin)Quarks Browser refactored ***org.lineageos.jelly*** for AOSP compilation
 Jelly browser with ads blocker, support for android 6.0+, a few ui changes and some bug fixes.
 Ads blocker and favicon in search bar based on this: https://github.com/CarbonROM/android_packages_apps_Quarks
 
@@ -13,6 +13,7 @@ Ads blocker and favicon in search bar based on this: https://github.com/CarbonRO
  
 ### tab(s) manager:
  * tile & iconShortcut for allTabs kill
+ * randomized UserAgent for each tab https://coveryourtracks.eff.org/kcarter?aat=1
  
 ### external launches:
  * local xml/mht/html/svg/eml, for both ^content^ (X-plore) & ^file^ (aosp/Files or GhostCommander)
@@ -41,9 +42,14 @@ chosen one (via /Settings/) triggered, from any selected text (anywhere via long
  * StartPage
  * Swisscows
 
-## AOSP compilation: use branch -b aosp (org.lineageos.jelly)
-Grant 
-> etc/sysconfig/?.xml 
-^hidden-api-whitelisted-app package="org.lineageos.jelly"/^
+## AOSP compilation: ***packages/apps/Quarks/***
+```
+use branch -b aosp (org.lineageos.jelly 21.0+)
+```
+
+```
+etc/sysconfig/?.xml 
+```
+>__\<hidden-api-whitelisted-app package="org.lineageos.jelly"/\>__
 
 prim-origin: https://github.com/LineageOS/android_packages_apps_Jelly
